--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/fonts.css">
 	<meta charset="UTF-8">
-	<title>12</title>
+	<title>Market Point</title>
 </head>
-<body>
+<body class="BookmanOldStyle-regular">
 	12312312
 </body>
 </html>
