--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="bower/tether/dist/css/tether.min.css">
+	<link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/main.css">
 	<meta charset="UTF-8">
 	<title>Market Point</title>
 </head>
-<body class="BookmanOldStyle-regular">
+<body class="BookmanOldStyle">
 	12312312
+	<script src="bower/jquery/dist/jquery.min.js"></script>
+	<script src="bower/tether/dist/js/tether.min.js"></script>
+	<script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
