--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<link rel="stylesheet" href="bower/tether/dist/css/tether.min.css">
 	<link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bower/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/main.css">
 	<meta charset="UTF-8">
 	<title>Market Point</title>
 </head>
-<body class="BookmanOldStyle">
-	12312312
+
+<body>
+	<header>
+		<!--ВЕРХНЯЯ ЛИНИЯ HEADER НАЧАЛО-->
+		<div class="header-blue">
+			<div class="max-container">
+				<div class="row header-row justify-content-between align-items-center">
+					<div>
+						<p class="pfdintextpro-light header-text header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
+						<p class="pfdintextpro-light header-text header-text_pr">
+							<span class="header-icon_pr"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+							</span> system@original-group.ru
+						</p>
+					</div>
+					<div>
+						<p class="pfdintextpro-light header-text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
+						<button class="pfdintextpro-bold header-text header-button text-uppercase button-size">Заказать звонок</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--ВЕРХНЯЯ ЛИНИЯ HEADER КОНЕЦ-->
+		<!--МЕНЮ НАЧАЛО-->
+		<div class="max-container">
+			<div class="row d-flex justify-content-between nav-height align-items-center">
+				<div class="logo">
+					<img src="img/logo.png" alt="Market Point">
+				</div>
+				<nav class="d-flex justify-content-between align-items-baseline">
+					<ul class="nav-container pfdintextpro-light">
+						<li class="nav-items"><a href="/">Главная</a></li>
+						<li class="nav-items"><a href="#">О компании</a></li>
+						<li class="nav-items"><a href="#">Новости</a></li>
+						<li class="nav-items"><a href="#">FAQ</a></li>
+						<li class="nav-items"><a href="#">Проверить продукт</a></li>
+						<li class="nav-items"><a href="#">Контакты</a></li>
+					</ul>
+					<div>
+						<button class="nav-button header-button pfdintextpro-bold header-text button-size text-uppercase">SOS! Я купил подделку</button>
+					</div>
+				</nav>
+			</div>
+		</div>
+		<!--МЕНЮ КОНЕЦ-->
+	</header>
+	<!--СЕКЦИЯ 1 НАЧАЛО-->
+	<section id="one" class="one">
+		<div class="container">
+			<h1 class="text-uppercase pfdintextpro-bold text-center">Как работает защита подлинности</h1>
+			<div class="border-h1_top"></div>
+			<div class="border-h1_bottom"></div>
+			<div class="row text-center">
+				<div class="col-lg-1"></div>
+				<div class="col-lg-2">
+					<div class="description_of_protection">
+						<img src="img/block1/img1.png" alt="">
+						<span class="text-uppercase pfdintextpro-bold">Генерация базы уникальных кодов</span>
+					</div>
+				</div>
+				<div class="col-lg-2"></div>
+				<div class="col-lg-2">
+					<div class="description_of_protection">
+						<img src="img/block1/img2.png" alt="">
+						<span class="text-uppercase pfdintextpro-bold">Нанесение кодов на упаковку товара</span>
+					</div>
+				</div>
+				<div class="col-lg-2"></div>
+				<div class="col-lg-2">
+					<div class="description_of_protection">
+						<img src="img/block1/img3.png" alt="">
+						<span class="text-uppercase pfdintextpro-bold">Проверка кода и подлинности товара</span>
+					</div>
+				</div>
+				<div class="col-lg-1"></div>
+			</div>
+			<div class="border_dot_green"></div>
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<h2 class="text-center text-uppercase">Проверь подлинность товара на нашем сайтe прямо сейчас (Введите код со стикера)</h2>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<form action="#" id="search-code" class="search-code text-center">
+						<div>
+							<input type="text" placeholder="Вставить код:" class="pfdintextpro-bold">
+							<button type="submit" class="text-uppercase">Начать проверку</button>
+						</div>
+					</form>
+				</div>
+			</div>
+
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<p class="pfdintextpro-light text-center">
+						Проверьте, что вы ввели именно код со специальной этикетки системы защиты подлинности, а не штрих-код, серийный номер или иные цифры с упаковки товара. Обычно коды системы ORIGINAL содержат 12 цифр и находятся под секретным слоем или на втором слое двухслойной этикетки (есть исключения).
+					</p>
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<!--СЕКЦИЯ 1 КОНЕЦ-->
 	<script src="bower/jquery/dist/jquery.min.js"></script>
 	<script src="bower/tether/dist/js/tether.min.js"></script>
 	<script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
