--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,6 @@
 					</form>
 				</div>
 			</div>
-
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<p class="pfdintextpro-light text-center">
@@ -110,13 +109,143 @@
 					</p>
 				</div>
 			</div>
-
 		</div>
 	</section>
 	<!--СЕКЦИЯ 1 КОНЕЦ-->
+	<!--СЕКЦИЯ 2 НАЧАЛО-->
+	<section id="two" class="two">
+		<div class="two-title-container">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-7">
+						<h2 class="pfdintextpro-bold subtitle text-center text-uppercase">Узнать подробнее о защите товаров
+						от подделок.</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+		<form action="#" class="request-call pfdintextpro-light" id="request-call">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2"></div>
+					<div class="col-lg-4">
+						<input type="text" placeholder="Ваше имя:">
+					</div>
+					<div class="col-lg-4">
+						<input type="phone" placeholder="Ваше телефон:">
+					</div>
+					<div class="col-lg-2"></div>
+				</div>
+			</div>
+			<button class="text-uppercase pfdintextpro-bold">
+				Заказать звонок
+			</button>
+		</form>
+	</section>
+	<!--СЕКЦИЯ 2 КОНЕЦ-->
+
+	<!--СЕКЦИЯ 3 НАЧАЛО-->
+	<section id="three" class="three">
+		<h2 class="subtitle text-center pfdintextpro-bold">
+			Система защиты от подделок
+		</h2>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<p class="text-center pfdintextpro-light">Original - это простой сервис проверки подлинности продукции. Для покупателей мы подготовили предельно понятный механизм проверки, удобный SMS-сервис и круглосуточную горячую линию. Для производителей мы предлагаем всестороннюю проработку проекта от эскиза этикетки до аналитики, включающей базу с таргетированными данными покупателей и информацию о точках продаж контрафакта.</p>
+				</div>
+			</div>
+			<div class="border_dot_gray"></div>
+			<div class="row justify-content-center">
+				<div class="col-lg-6">
+					<span class="pfdintextpro-light text-center result-title">Покупатель получает результат проверки в формате,соответствующем 
+					способу отправки запроса.</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2"></div>
+				<div class="col-lg-3">
+					<span class="line-gray"></span>
+					<span class="circle-green"></span>
+					<img src="img/block2/img1.png" alt="">
+					<span class="text-center description_img pfdintextpro-bold">
+						Если подлинность не подтвердилась
+					</span>
+				</div>
+				<div class="col-lg-2"></div>
+				<div class="col-lg-3">
+					<span class="line-gray"></span>
+					<span class="circle-green"></span>
+					<img src="img/block2/img2.png" alt="">
+					<span class="text-center description_img pfdintextpro-bold">
+						Продукция подлинная
+					</span>
+				</div>
+				<div class="col-lg-2"></div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<span class="text-center description_img pfdintextpro-bold">
+						Покупатель отправляет запрос о проверке подлинности продукта одним из способов:
+					</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-2"></div>
+				<div class="col-lg-3">
+					<span class="line-gray"></span>
+					<span class="circle-green"></span>
+					<span class="line-gray"></span>
+				</div>
+				<div class="col-lg-2"></div>
+				<div class="col-lg-3">
+					<span class="line-gray"></span>
+					<span class="circle-green"></span>
+					<span class="line-gray"></span>
+				</div>
+				<div class="col-lg-2"></div>
+			</div>
+			<div class="border-line-gray"></div>
+
+			<div class="row">
+				<div class="col-lg-3">
+					<span class="line-gray line-gray_mt22"></span>
+					<span class="circle-green"></span>
+					<p>
+						Отправить уникальный код в SMS-сообщении на короткий номер 2420
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<span class="line-gray line-gray_mt22"></span>
+					<span class="circle-green"></span>
+					<p>
+						Зарегистрировать код на сайте
+						сервиса www.original.su или сайте производителя, куда интегрируется функционал проверки кодов;
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<span class="line-gray line-gray_mt22"></span>
+					<span class="circle-green"></span>
+					<p>
+						Сканировать код с помощью любого QR-ридера или специального мобильного приложения (для QR-кодов);
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<span class="line-gray line-gray_mt22"></span>
+					<span class="circle-green"></span>
+					<p>
+						Назвать код оператору службы поддержки, позвонив по телефону бесплатной круглосуточной горячей линии 8 (800) 555-00-95.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--СЕКЦИЯ 3 НАЧАЛО-->
 	<script src="bower/jquery/dist/jquery.min.js"></script>
 	<script src="bower/tether/dist/js/tether.min.js"></script>
 	<script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="bower/jquery.maskedinput/dist/jquery.maskedinput.min.js"></script>
+	<script src="js/common.js"></script>
 </body>
 
 </html>
