--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="bower/tether/dist/css/tether.min.css">
 	<link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="bower/slick-carousel/slick/slick-theme.css">
+	<link rel="stylesheet" href="bower/slick-carousel/slick/slick.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -124,7 +126,7 @@
 				</div>
 			</div>
 		</div>
-		<form action="#" class="request-call pfdintextpro-light" id="request-call">
+		<form action="#" class="request-call request-call-bg pfdintextpro-light" id="request-call">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-2"></div>
@@ -241,10 +243,240 @@
 		</div>
 	</section>
 	<!--СЕКЦИЯ 3 НАЧАЛО-->
+
+	<!--СЕКЦИЯ 4 НАЧАЛО-->
+	<section id="four" class="four">
+		<div class="max-container">
+			<div class="row d-flex justify-content-between">
+				<p class="text-uppercase pfdintextpro-medium">
+					Рассчитайте вашу дополнительную выручку при защите подлинности
+				</p>
+				<button type="button" class="text-uppercase pfdintextpro-medium">расчитать стоимость</button>
+			</div>
+		</div>
+	</section>
+	<!--СЕКЦИЯ 4 КОНЕЦ-->
+
+	<!--СЕКЦИЯ 5 НАЧАЛО-->
+	<section id="five" class="five">
+		<div class="max-container">
+			<div class="slick">
+				<!--ПЕРВЫЙ СЛАЙД НАЧАЛО-->
+
+				<div class="row d-flex align-items-center">
+					<div class="photo col text-center">
+						<img src="img/block3-img.png" alt="">
+					</div>
+					<div class="description col">
+						<p class="product-title pfdintextpro-medium">
+							Защищенные системой товары
+						</p>
+						<p class="product-subtitle pfdintextpro-medium">
+							Очки «Радуга прозрения»	аппарат светодиодный офтальмологический (очки Панкова)
+						</p>
+						<p class="product-description pfdintextpro-light">
+							Авторская технология профессора О.П. Панкова соединённая с новейшими достижениями техники:
+							изготовлен по ТУ 9444-001-78551706-2011;
+							рекомендован людям, работа которых связана с большой нагрузкой на зрение (педагоги, учащиеся, водители, программисты и т.д.);
+							для больниц и домашнего использования;
+							для всех возрастов;
+							комплексное лечении многих заболеваний глаз: глаукома, катаракта, хроническая усталость глаз и пр.
+						</p>
+						<button>Подробнее</button>
+					</div>
+				</div>
+
+				<!--ПЕРВЫЙ СЛАЙД КОНЕЦ-->
+
+
+				<!--ВТОРОЙ СЛАЙД НАЧАЛО-->
+
+				<div class="row d-flex align-items-center">
+					<div class="photo col text-center">
+						<img src="img/block3-img.png" alt="">
+					</div>
+					<div class="description col">
+						<p class="product-title pfdintextpro-medium">
+							Защищенные системой товары
+						</p>
+						<p class="product-subtitle pfdintextpro-medium">
+							Очки «Радуга прозрения»	аппарат светодиодный офтальмологический (очки Панкова)
+						</p>
+						<p class="product-description pfdintextpro-light">
+							Авторская технология профессора О.П. Панкова соединённая с новейшими достижениями техники:
+							изготовлен по ТУ 9444-001-78551706-2011;
+							рекомендован людям, работа которых связана с большой нагрузкой на зрение (педагоги, учащиеся, водители, программисты и т.д.);
+							для больниц и домашнего использования;
+							для всех возрастов;
+							комплексное лечении многих заболеваний глаз: глаукома, катаракта, хроническая усталость глаз и пр.
+						</p>
+						<button>Подробнее</button>
+					</div>
+				</div>
+
+				<!--ВТОРОЙ СЛАЙД КОНЕЦ-->
+
+
+				<!--ТРЕТИЙ СЛАЙД НАЧАЛО-->
+
+				<div class="row d-flex align-items-center">
+					<div class="photo col text-center">
+						<img src="img/block3-img.png" alt="">
+					</div>
+					<div class="description col">
+						<p class="product-title pfdintextpro-medium">
+							Защищенные системой товары
+						</p>
+						<p class="product-subtitle pfdintextpro-medium">
+							Очки «Радуга прозрения»	аппарат светодиодный офтальмологический (очки Панкова)
+						</p>
+						<p class="product-description pfdintextpro-light">
+							Авторская технология профессора О.П. Панкова соединённая с новейшими достижениями техники:
+							изготовлен по ТУ 9444-001-78551706-2011;
+							рекомендован людям, работа которых связана с большой нагрузкой на зрение (педагоги, учащиеся, водители, программисты и т.д.);
+							для больниц и домашнего использования;
+							для всех возрастов;
+							комплексное лечении многих заболеваний глаз: глаукома, катаракта, хроническая усталость глаз и пр.
+						</p>
+						<button>Подробнее</button>
+					</div>
+				</div>
+
+				<!--ТРЕТИЙ СЛАЙД КОНЕЦ-->
+			</div>
+		</div>
+	</section>
+	<!--СЕКЦИЯ 5 КОНЕЦ-->
+
+	<!--СЕКЦИЯ 6 НАЧАЛО-->
+
+	<section id="six" class="six">
+		<div class="max-container">
+			<div class="d-flex align-items-baseline justify-content-center">
+				<span class="pfdintextpro-medium number">131</span>
+				<span class="pfdintextpro-medium number">308</span>
+				<span class="pfdintextpro-medium number">732</span>
+			</div>
+			<p class="text-center text-uppercase pfdintextpro-medium">товаров защищено от подделок</p>
+		</div>
+	</section>
+
+	<!--СЕКЦИЯ 6 КОНЕЦ-->
+
+	<!--СЕКЦИЯ 7 НАЧАЛО-->
+	<section id="seven" class="seven">
+		
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<h2 class="pfdintextpro-bold subtitle text-center">Наши клиенты</h2>
+				</div>
+				<img src="img/block4-img.png" alt="">
+				<button type="button" class="pfdintextpro-bold">Смотреть рекомендательные письма</button>
+			</div>
+			
+		</div>
+	</section>
+	<!--СЕКЦИЯ 7 КОНЕЦ-->
+
+
+	<!--СЕКЦИЯ 8 НАЧАЛО-->
+	<section id="eight" class="eight">
+		
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<h2 class="pfdintextpro-bold subtitle text-center text-uppercase">Узнать подробнее о защите товаров
+					от подделок.</h2>
+				</div>
+			</div>
+		</div>
+		
+		<form action="#" class="request-call request-call-eight pfdintextpro-light" id="request-call-eight">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2"></div>
+					<div class="col-lg-4">
+						<input type="text" placeholder="Ваше имя:">
+					</div>
+					<div class="col-lg-4">
+						<input type="phone" placeholder="Ваше телефон:">
+					</div>
+					<div class="col-lg-2"></div>
+				</div>
+			</div>
+			<button class="text-uppercase pfdintextpro-bold">
+				Заказать звонок
+			</button>
+		</form>
+	</section>
+	<!--СЕКЦИЯ 8 КОНЕЦ-->
+
+	<!--СЕКЦИЯ 9 НАЧАЛО-->
+
+	<section class="nine" id="nine">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-7">
+					<h2 class="pfdintextpro-bold subtitle text-center">Система защищена патентом</h2>
+					<p class="pfdintextpro-light text-center">
+						Мы обладаем двумя патентами на технологии, используемые в защите подлинности товаров наших клиентов, а также сертифицированной системой менеджмента качества.
+					</p>
+				</div>
+				<div class="certificats">
+					<div class="row">
+
+						<div class="col-lg-4">
+							<img src="img/block5-img.png" alt="">
+						</div>
+						<div class="col-lg-4">
+							<img src="img/block5-img.png" alt="">
+						</div>
+						<div class="col-lg-4">
+							<img src="img/block5-img.png" alt="">
+						</div>
+
+					</div>
+				</div>
+				
+			</div>
+			
+		</div>
+	</section>
+
+	<!--СЕКЦИЯ 9 КОНЕЦ-->
+
+	<section class="ten" id="ten">
+		<div class="container">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m8!1m3!1d5079.839602808688!2d30.484949524298095!3d50.4612180913065!3m2!1i1024!2i768!4f13.1!4m11!3e2!4m5!1s0x40d4ce7976bee27b%3A0x1d3e315c9ebba01c!2z0JvRg9C60YzRj9C90L7QstGB0LrQsNGPLCDQmtC40LXQsiwg0LPQvtGA0L7QtCDQmtC40LXQsiwg0KPQutGA0LDQuNC90LA!3m2!1d50.462416999999995!2d30.4818027!4m3!3m2!1d50.459352599999995!2d30.4965838!5e0!3m2!1sru!2sua!4v1529895682580" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</section>
+
+	<footer>
+		<div class="footer-gray">
+			<div class="max-container">
+				<div class="row header-row justify-content-between align-items-center">
+					<div>
+						<p class="pfdintextpro-light header-text header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
+						<p class="pfdintextpro-light header-text header-text_pr">
+							<span class="header-icon_pr"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+							</span> system@original-group.ru
+						</p>
+					</div>
+					<div>
+						<p class="pfdintextpro-light header-text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
+						<button class="pfdintextpro-bold header-text header-button text-uppercase button-size">Заказать звонок</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 	<script src="bower/jquery/dist/jquery.min.js"></script>
 	<script src="bower/tether/dist/js/tether.min.js"></script>
 	<script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower/jquery.maskedinput/dist/jquery.maskedinput.min.js"></script>
+	<script src="bower/slick-carousel/slick/slick.min.js"></script>
 	<script src="js/common.js"></script>
 </body>
 
