--- a/app/index.html
+++ b/app/index.html
@@ -21,15 +21,15 @@
 			<div class="max-container">
 				<div class="row header-row justify-content-between align-items-center">
 					<div>
-						<p class="pfdintextpro-light header-text header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
-						<p class="pfdintextpro-light header-text header-text_pr">
+						<p class="pfdintextpro-light text text_white header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
+						<p class="pfdintextpro-light text text_white header-text_pr">
 							<span class="header-icon_pr"><i class="fa fa-envelope-o" aria-hidden="true"></i>
 							</span> system@original-group.ru
 						</p>
 					</div>
 					<div>
-						<p class="pfdintextpro-light header-text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
-						<button class="pfdintextpro-bold header-text header-button text-uppercase button-size">Заказать звонок</button>
+						<p class="pfdintextpro-light text_white text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
+						<button class="pfdintextpro-bold text_white text header-button text-uppercase button-size">Заказать звонок</button>
 					</div>
 				</div>
 			</div>
@@ -51,7 +51,7 @@
 						<li class="nav-items"><a href="#">Контакты</a></li>
 					</ul>
 					<div>
-						<button class="nav-button header-button pfdintextpro-bold header-text button-size text-uppercase">SOS! Я купил подделку</button>
+						<button class="nav-button header-button pfdintextpro-bold text_white text button-size text-uppercase">SOS! Я купил подделку</button>
 					</div>
 				</nav>
 			</div>
@@ -457,17 +457,24 @@
 			<div class="max-container">
 				<div class="row header-row justify-content-between align-items-center">
 					<div>
-						<p class="pfdintextpro-light header-text header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
-						<p class="pfdintextpro-light header-text header-text_pr">
+						<p class="pfdintextpro-light text_black text header-text_pr">127322, г. Москва, Огородный проезд, д.20, стр.27</p>
+						<p class="pfdintextpro-light text_black text header-text_pr">
 							<span class="header-icon_pr"><i class="fa fa-envelope-o" aria-hidden="true"></i>
 							</span> system@original-group.ru
 						</p>
 					</div>
 					<div>
-						<p class="pfdintextpro-light header-text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
-						<button class="pfdintextpro-bold header-text header-button text-uppercase button-size">Заказать звонок</button>
+						<p class="pfdintextpro-light text_black text_big"><span class="header-icon_pr"><i class="fa fa-phone" aria-hidden="true"></i></span>8 (800) 555 00 95</p>
+						<button class="pfdintextpro-bold text footer-button text-uppercase button-size">Заказать звонок</button>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="max-container">
+			<div class="row justify-content-between align-items-center">
+				<p class="pfdintextpro-light text_black text">&copy; 2018 Market point</p>
+				<button class="btn-up"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
 			</div>
 		</div>
 	</footer>
